@@ -1,3 +1,7 @@
+Fri Feb 19 00:23:24 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c (pack_unpack): call PACK_ITEM_ADJUST for 'Q'.
+	
 Tue Feb 16 20:56:39 2010  Tanaka Akira  <akr@fsij.org>
 
 	* file.c (rb_group_member): renamed from group_member.
